= MediaWiki release notes =

Security reminder: MediaWiki does not require PHP's register_globals
setting since version 1.2.0. If you have it on, turn it *off* if you can.

== Version 1.3.9, ****-**-** ==

Changes from 1.3.8:
* Backported "Templates used in this page"-feature of EditPage
* Allow "MySkin" as a default skin.
* (bug 938) Parse namespaces correctly on self-interwiki links

== Version 1.3.8, 2004-11-15 ==

MediaWiki 1.3.8 is a bugfix release. Those running wikis with uploads
enabled are strongly recommended to upgrade as this fixes several problems
with overwriting previously-uploaded files.

Changes from 1.3.7:
* (bug 506) fix array_key_exists() warning for IIS servers using
  ISAPI mode
* (bug 718) fix bad charset in (file) cached pages
* use local numerals in category page (for Hindi et al)
* alias month abbreviations to month names in Hindi
* add localized numerals for Gujarati and Kannada
* fix Category and project namespaces for Hindi
* Don't output bogus timestamp on Special:Recentchanges if no entries
* Correct template include path which broke some but not all Windows installs
* Fix edit form submission problem with some PHP versions
* Disallow unreachable titles with %XX hex codes
* Allow page [[0]] to be renamed
* (bug 774) when saving with section=new, return to the anchor as with
  existing numbered section edits
* Experimental shared upload overlay area (disabled by default)
* (bug 806) Removed some "Wikipedia" hardcoding in German localization
* User option localization fix for some extensions
* (bug 809) now try to load the mysql php extension if it isn't loaded
* (bug 848) fix error message in Special:Newpages RSS and Atom feeds
* (bug 26) fix cache headers on anon talk page notification
* (bug 874) added 'cgi' to wgFileBlacklist
* (bug 862) localize date and time format for Finnish
* (bug 548) Don't overwrite images until the user confirms it


== Version 1.3.7, 2004-10-18 ==
Changes from 1.3.6: